[package]
name = "concurrency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
reqwest = "0.11.23"
anyhow = "1.0.79"
