[package]
name = "concurrency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0"
futures = "0.3.30"
tokio = { version = "1.37.0", features = ["full"] }
reqwest = "0.11.24"
anyhow = "1.0.80"
